# OpenGLClass

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle.kts  clone.sh  settings.gradle.kts
buildSrc/: build.gradle.kts
cmake/: Unnecessary.cmake
dummy_app/: CMakeLists.txt  main.cpp
editor/: CMakeLists.txt  README.md  main.cpp  pubspec.yaml
editor/lib/: editor.dart  hierarchy.dart  inspector.dart  main.dart  project.dart
editor/lib/interop/: components.dart  entity.dart  scene.dart
editor/linux/: Makefile  main.cc
editor/plugin/: pubspec.yaml
editor/plugin/lib/: unnecessary.dart
editor/plugin/linux/: unnecessary_plugin.cpp  unnecessary_plugin.h
editor/plugin/linux/flutter/: generated_plugin_registrant.cc
engine/: CMakeLists.txt
engine/include/unnecessary/: application.h
engine/include/unnecessary/ecs/: common.h
engine/include/unnecessary/graphics/: geometry.h  graphics.h  texture.h
engine/include/unnecessary/graphics/buffers/: vertex_array_buffer.h  vertex_buffer.h
engine/include/unnecessary/graphics/shaders/: program.h
engine/include/unnecessary/utility/: layout.h
engine/shaders/: std.frag
engine/src/unnecessary/: application.cpp
engine/src/unnecessary/ecs/: common.cpp
engine/src/unnecessary/graphics/: geometry.cpp  material.cpp
engine/src/unnecessary/graphics/buffers/: vertex_array_buffer.cpp  vertex_buffer.cpp
engine/src/unnecessary/graphics/shaders/: program.cpp  shader.cpp
engine/src/unnecessary/utility/: debugging.cpp  layout.cpp
include/: application.h
include/ecs/: common.h
include/graphics/: binding.h  geometry.h  graphics.h  material.h
include/graphics/buffers/: index_buffer.h  vertex_array_buffer.h  vertex_buffer.h
include/graphics/shaders/: program.h  shader.h
include/utility/: debugging.h  layout.h
modules/: CMakeLists.txt
modules/2d/: CMakeLists.txt
modules/2d/include/unnecessary/2d/: common.h
modules/2d/src/unnecessary/2d/: common.cpp
modules/base/: CMakeLists.txt  build.gradle.kts
modules/base/include/unnecessary/: application.h
modules/base/include/unnecessary/resources/: loaders.h
modules/base/src/unnecessary/: application.cpp
modules/common_ecs/: CMakeLists.txt  build.gradle.kts
modules/common_ecs/include/unnecessary/ecs/: common.h
modules/common_ecs/src/unnecessary/ecs/: common.cpp
modules/graphs/: CMakeLists.txt
modules/graphs/dummy/: dummy.cpp
modules/graphs/include/unnecessary/graphs/: graph.h  list_graph.h  matrix_graph.h
modules/images/: CMakeLists.txt
modules/images/include/unnecessary/graphics/: image.h
modules/images/tests/: loadtest.cpp
modules/levels/: CMakeLists.txt
modules/levels/include/unnecessary/worlds/: world.h
modules/opengl_rendering/: CMakeLists.txt
modules/opengl_rendering/include/unnecessary/graphics/: binding.h  geometry.h  gl_loaders.h  material.h  resources.h  texture.h
modules/opengl_rendering/shaders/: std.frag  std.geom  std.vert  unnecessary.glsl
modules/opengl_rendering/src/unnecessary/graphics/: binding.cpp  geometry.cpp  gl_loaders.cpp  material.cpp  resources.cpp
modules/rendering/: CMakeLists.txt
modules/rendering/include/unnecessary/rendering/: render_graph.h  rendering_backend.h
modules/serialization/: CMakeLists.txt
modules/ui/: CMakeLists.txt
modules/ui/include/unnecessary/ui/: common.h
shaders/: std.frag  std.vert
src/: dummy.cpp
(+32 files in other folders)
